# rocketmq-client-cpp

./: .bazelrc  .clang-format  BUILD  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: main.yml
api/rocketmq/: AsyncCallback.h  DefaultMQProducer.h  DefaultMQPushConsumer.h  ErrorCode.h  MQMessageExt.h  MQSelector.h  MessageListener.h
bazel/: combine.bzl  rocketmq_deps.bzl
example/rocketmq/: BenchmarkPushConsumer.cpp  ExampleAsyncProducer.cpp  ExampleBroadcastPushConsumer.cpp  ExampleProducer.cpp  ExamplePullConsumer.cpp  ExamplePushConsumer.cpp  ExampleTransactionProducer.cpp  PushConsumerWithCustomExecutor.cpp  PushConsumerWithThrottle.cpp  SqlConsumer.cpp
proto/apache/rocketmq/v1/: definition.proto  service.proto
src/main/cpp/base/: BUILD.bazel  CMakeLists.txt  CurlHttpClient.cpp  MQMessage.cpp  MixAll.cpp  TopAddressing.cpp  UniqueIdGenerator.cpp  UtilAll.cpp
src/main/cpp/base/include/: CurlHttpClient.h  HttpClient.h  HttpClientImpl.h  MessageAccessor.h  MixAll.h  ThreadPool.h  ThreadPoolImpl.h
src/main/cpp/client/: BUILD.bazel  CMakeLists.txt  ClientConfigImpl.cpp  ClientInstance.cpp  ClientManagerImpl.cpp  MessageInterceptorContext.cpp  RpcClientImpl.cpp  Signature.cpp  SpanName.cpp  TracingAttribute.cpp  TracingUtility.cpp
src/main/cpp/client/include/: Client.h  ClientConfig.h  ClientConfigImpl.h  ClientInstance.h  (+11 more)
src/main/cpp/log/: LoggerImpl.cpp
src/main/cpp/rocketmq/: AsyncReceiveMessageCallback.cpp  BUILD.bazel  BaseImpl.cpp  CMakeLists.txt  ClientImpl.cpp  ConsumeFifoMessageService.cpp  ConsumeMessageConcurrentlyService.cpp  ConsumeMessageOrderlyService.cpp  ConsumeMessageService.cpp  ConsumeStandardMessageService.cpp  CredentialsProvider.cpp  DefaultMQProducer.cpp  DefaultMQProducerImpl.cpp  DefaultMQPullConsumerImpl.cpp  DefaultMQPushConsumer.cpp  DefaultMQPushConsumerImpl.cpp  DynamicNameServerResolver.cpp  ErrorCode.cpp  FilterExpression.cpp  ProcessQueue.cpp  ProcessQueueImpl.cpp  ProducerImpl.cpp  PullConsumerImpl.cpp  PushConsumerImpl.cpp  SendCallbacks.cpp  StaticNameServerResolver.cpp  TracingMessageInterceptor.cpp  TransactionImpl.cpp
src/main/cpp/rocketmq/include/: AsyncReceiveMessageCallback.h  BaseImpl.h  ClientImpl.h  ConsumeMessageService.h  DefaultMQProducerImpl.h  DefaultMQPullConsumerImpl.h  DefaultMQPushConsumerImpl.h  DynamicNameServerResolver.h  NameServerResolver.h  ProcessQueue.h  ProcessQueueImpl.h  ProducerImpl.h  PushConsumer.h  PushConsumerImpl.h  SendCallbacks.h  StaticNameServerResolver.h  StsCredentialsProviderImpl.h  TracingMessageInterceptor.h
src/main/cpp/rocketmq/mocks/: ConsumerMock.h
src/main/cpp/rocketmq/mocks/include/: ProcessQueueMock.h  PushConsumerMock.h
src/main/cpp/scheduler/: Scheduler.cpp  SchedulerImpl.cpp
src/test/cpp/it/: TopicPublishInfoTest.cpp
src/test/cpp/ut/tracing/exporters/: BUILD.bazel  OtlpExportersTest.cpp
(+35 files in other folders)
